--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ h1 {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: brown;
 }
 
 .logo {
@@ -73,6 +74,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: yellowgreen;
 }
 button:hover {
   border-color: #646cff;
